new_test/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
#   namespace: argo-rollouts
spec:
  replicas: 3
  strategy:
    canary:
      analysis:
        templates:
        - templateName: getenv
        args:
        - name: rollout-arg-key
          value: rollout-arg-value
      steps:
      - setWeight: 20
      - pause: {duration: 30s}
      - setWeight: 40
      - pause: {duration: 30s}
      - setWeight: 60
      - pause: {duration: 30s}
      - setWeight: 80
      - pause: {duration: 30s}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
      annotations:
        forceNewRevision: b
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: rollouts-demo
        image: docker.io/opsmxdev/issuegen:v3.0.6
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
