new_test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
#   namespace: argo-rollouts 
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
