new_test/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: rollout-demo-active.autopilot.opsmx.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rollout-demo-active
            port:
              number: 80
